Show second solution to problem 3

--- a/quizzes/quiz9_soln.ipynb
+++ b/quizzes/quiz9_soln.ipynb
@@ -122,8 +122,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Solution 1: Cutting\n",
+    "\n",
+    "Try all the ways of cutting an element into pieces.  If any of them give A,B that are already in S, we know that element is decomposable.  Keep elements that are not found to be decomposable."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -150,6 +159,160 @@
     "        if not is_decomposable(S,x):\n",
     "            S_indecom.add(x)\n",
     "    return S_indecom"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Solution 2: Joining\n",
+    "\n",
+    "This alternative method makes a copy of S, and then looks at each string of the form A+B for A,B in S.  Each such sum is removed from the copy, if present.  Then the remaining elements are known to be indecomposable."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#MCS 275 Quiz 9 Problem 3\n",
+    "# David Dumas\n",
+    "\n",
+    "def indecomposables2(S):\n",
+    "    \"\"\"Return the set of elements in S that are not expressible as a+b for a,b in S\"\"\"\n",
+    "    T = set(S) # creates a copy of S; \n",
+    "               # ( set() accepts any iterable and creates a new set from it. )\n",
+    "    for a in S:\n",
+    "        for b in S:\n",
+    "            T.discard(a+b)\n",
+    "    return T"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Comparing the solutions\n",
+    "\n",
+    "Since we've shown two rather different ways to solve the problem---cutting vs joining---why might you choose one or the other?\n",
+    "\n",
+    "This isn't part of the quiz, but let's do a timing test to see how they behave in two extreme cases:\n",
+    "1. S contains many elements, all short strings\n",
+    "1. S contains a few elements, all very long"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Generating the test data...\n",
+      "cutting-based, many short strings: 0.011 s\n",
+      "joining-based, many short strings: 11.222 s\n"
+     ]
+    }
+   ],
+   "source": [
+    "import random\n",
+    "import time\n",
+    "\n",
+    "def rand_word(n):\n",
+    "    \"\"\"Make a random string of length n from letters a-z\"\"\"\n",
+    "    return \"\".join(random.choices(\"abcdefghijklmnopqrstuvwxyz\",k=n))\n",
+    "\n",
+    "def rand_short_word():\n",
+    "    \"\"\"Random short string\"\"\"\n",
+    "    return rand_word(10)\n",
+    "\n",
+    "def rand_long_word():\n",
+    "    \"\"\"Random long string\"\"\"\n",
+    "    return rand_word(100_000)\n",
+    "\n",
+    "print(\"Generating the test data...\")\n",
+    "\n",
+    "S_short_many = set()\n",
+    "for _ in range(10_000):\n",
+    "    S_short_many.add(rand_short_word())\n",
+    "    \n",
+    "# Now let's make sure it has at least one decomposable in it\n",
+    "# (not strictly needed, but why not make sure the function\n",
+    "# `indecomposables` actually removes something!)\n",
+    "x = S_short_many.pop()\n",
+    "y = S_short_many.pop()\n",
+    "S_short_many.add(x+y)\n",
+    "S_short_many.add(x)\n",
+    "S_short_many.add(y)\n",
+    "\n",
+    "S_long_few = set()\n",
+    "for _ in range(20):\n",
+    "    S_long_few.add(rand_long_word())\n",
+    "\n",
+    "# Now let's make sure it has at least one decomposable in it\n",
+    "x = S_long_few.pop()\n",
+    "y = S_long_few.pop()\n",
+    "S_long_few.add(x+y)\n",
+    "S_long_few.add(x)\n",
+    "S_long_few.add(y)\n",
+    "\n",
+    "\n",
+    "t_start = time.time()\n",
+    "T = indecomposables(S_short_many)\n",
+    "t = time.time() - t_start\n",
+    "print(\"cutting-based, many short strings: {:.3f} s\".format(t))\n",
+    "\n",
+    "t_start = time.time()\n",
+    "T = indecomposables2(S_short_many)\n",
+    "t = time.time() - t_start\n",
+    "print(\"joining-based, many short strings: {:.3f} s\".format(t))\n",
+    "\n",
+    "t_start = time.time()\n",
+    "T = indecomposables(S_long_few)\n",
+    "t = time.time() - t_start\n",
+    "print(\"cutting-based, few long strings: {:.3f} s\".format(t))\n",
+    "\n",
+    "t_start = time.time()\n",
+    "T = indecomposables2(S_long_few)\n",
+    "t = time.time() - t_start\n",
+    "print(\"joining-based, few long strings: {:.3f} s\".format(t))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Each solution is fast in one case, and slow in the other!\n",
+    "\n",
+    "When there are many short strings (say, 10,000 of them of length 10), the joining-based approach is extremely slow because it looks at every possible sum A+B (of which there are 100,000,000).  The cutting-based approach only needs to consider the 9 ways to split each of the 10,000 words.\n",
+    "\n",
+    "When there are just a few long strings (say, 20 of them, each of length 100,000) the comparison is reversed.  The joining-based approach only looks at the 20x20=400 ways you can add two elements of the set.  But the cutting-based approach needs to consider all 99,999 ways to split each of the 20 elements."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Epilogue: A slicker way to write the joining solution\n",
+    "\n",
+    "There is a shorter but equivalent way to write the joining-based solution. You wouldn't be expected to come up with this one, as it uses a feature we didn't discuss in MCS 275, but I wanted to show it as a taste of a nice feature you might want to learn about later.  Python's *generator expressions* provide anonymous lazy iterables that can be used to avoid the nested for loops and explicit copying of S in the previous solution."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#MCS 275 Quiz 9 Problem 3\n",
+    "# David Dumas\n",
+    "\n",
+    "def indecomposables2slick(S):\n",
+    "    \"\"\"Return the set of elements in S that are not expressible as a+b for a,b in S\"\"\"\n",
+    "    return S.difference( a+b for a in S for b in S )"
    ]
   }
  ],
