Add note about np.linalg.norm alternative

--- a/worksheets/worksheet10_soln.ipynb
+++ b/worksheets/worksheet10_soln.ipynb
@@ -84,6 +84,8 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "#### B. Here is a 16x16 numpy matrix of integers (dtype int64):\n",
     "\n",
@@ -108,9 +110,7 @@
     "Find a way to produce this matrix and store it in a variable named `A`. \n",
     "\n",
     "This is easy to do if you just copy the matrix into your source code.  But you can do it with much less code using `numpy` indexing.  (You'll want to examine the matrix carefully to spot all the patterns!) What's the shortest way to do it?  I was able to do it in 3 lines, 70 characters total, including newline characters (but not counting the line that imports `numpy`).  Can you do better?"
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
@@ -118,10 +118,25 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
+     "output_type": "stream",
      "text": [
-      "[[-1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1]\n [20 -1 30 -1 40 -1 50 -1 60 -1 70 -1 80 -1 90 -1]\n [-1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1]\n [-1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1]\n [-1 10 -1 -1 10 -1 -1 10 -1 -1 10 -1 -1 10 -1 -1]\n [20 10 30 -1 40 -1 50 10 60 -1 70 -1 80 10 90 -1]\n [-1 10 -1 -1 10 -1 -1 10 -1 -1 10 -1 -1 10 -1 -1]\n [-1 10 -1 -1 10 -1 -1 10 -1 -1 10 -1 -1 10 -1 -1]\n [-1 10 -1 -1 10 -1 -1 10 -1 -1 10 -1 -1 10 -1 -1]\n [20 10 30 -1 40 -1 50 10 60 -1 70 -1 80 10 90 -1]\n [-1 10 -1 -1 10 -1 -1 10 -1 -1 10 -1 -1 10 -1 -1]\n [-1 10 -1 -1 10 -1 -1 10 -1 -1 10 -1 -1 10 -1 -1]\n [-1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1]\n [20 -1 30 -1 40 -1 50 -1 60 -1 70 -1 80 -1 90 -1]\n [-1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1]\n [-1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1]]\n"
+      "[[-1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1]\n",
+      " [20 -1 30 -1 40 -1 50 -1 60 -1 70 -1 80 -1 90 -1]\n",
+      " [-1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1]\n",
+      " [-1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1]\n",
+      " [-1 10 -1 -1 10 -1 -1 10 -1 -1 10 -1 -1 10 -1 -1]\n",
+      " [20 10 30 -1 40 -1 50 10 60 -1 70 -1 80 10 90 -1]\n",
+      " [-1 10 -1 -1 10 -1 -1 10 -1 -1 10 -1 -1 10 -1 -1]\n",
+      " [-1 10 -1 -1 10 -1 -1 10 -1 -1 10 -1 -1 10 -1 -1]\n",
+      " [-1 10 -1 -1 10 -1 -1 10 -1 -1 10 -1 -1 10 -1 -1]\n",
+      " [20 10 30 -1 40 -1 50 10 60 -1 70 -1 80 10 90 -1]\n",
+      " [-1 10 -1 -1 10 -1 -1 10 -1 -1 10 -1 -1 10 -1 -1]\n",
+      " [-1 10 -1 -1 10 -1 -1 10 -1 -1 10 -1 -1 10 -1 -1]\n",
+      " [-1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1]\n",
+      " [20 -1 30 -1 40 -1 50 -1 60 -1 70 -1 80 -1 90 -1]\n",
+      " [-1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1]\n",
+      " [-1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1]]\n"
      ]
     }
    ],
@@ -164,8 +179,8 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
+     "output_type": "stream",
      "text": [
       "Bluish pixel found at (20,21) in file haystacks/haystack1/img275.png\n"
      ]
@@ -213,17 +228,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "Secret message!\nrosebud\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# MCS 275 Worksheet 10 Problem 3\n",
     "# Jennifer Vaccaro\n",
@@ -335,6 +342,22 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Another way to find the RMS, not using `np.linalg`, would be to take the dot product of the array with itself, e.g."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "            d[\"RMS\"] = np.sqrt( arr.dot(arr) )"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "\n",
     "## 5. Impact crater (numpy)\n",
     "\n",
@@ -353,10 +376,21 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
+     "output_type": "stream",
      "text": [
-      "[[0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.   ]\n [0.    0.079 0.152 0.213 0.256 0.279 0.279 0.256 0.213 0.152 0.079 0.   ]\n [0.    0.152 0.292 0.409 0.492 0.535 0.535 0.492 0.409 0.292 0.152 0.   ]\n [0.    0.213 0.409 0.571 0.687 0.    0.    0.687 0.571 0.409 0.213 0.   ]\n [0.    0.256 0.492 0.687 0.    0.    0.    0.    0.687 0.492 0.256 0.   ]\n [0.    0.279 0.535 0.    0.    0.    0.    0.    0.    0.535 0.279 0.   ]\n [0.    0.279 0.535 0.    0.    0.    0.    0.    0.    0.535 0.279 0.   ]\n [0.    0.256 0.492 0.687 0.    0.    0.    0.    0.687 0.492 0.256 0.   ]\n [0.    0.213 0.409 0.571 0.687 0.    0.    0.687 0.571 0.409 0.213 0.   ]\n [0.    0.152 0.292 0.409 0.492 0.535 0.535 0.492 0.409 0.292 0.152 0.   ]\n [0.    0.079 0.152 0.213 0.256 0.279 0.279 0.256 0.213 0.152 0.079 0.   ]\n [0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.   ]]\n"
+      "[[0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.   ]\n",
+      " [0.    0.079 0.152 0.213 0.256 0.279 0.279 0.256 0.213 0.152 0.079 0.   ]\n",
+      " [0.    0.152 0.292 0.409 0.492 0.535 0.535 0.492 0.409 0.292 0.152 0.   ]\n",
+      " [0.    0.213 0.409 0.571 0.687 0.    0.    0.687 0.571 0.409 0.213 0.   ]\n",
+      " [0.    0.256 0.492 0.687 0.    0.    0.    0.    0.687 0.492 0.256 0.   ]\n",
+      " [0.    0.279 0.535 0.    0.    0.    0.    0.    0.    0.535 0.279 0.   ]\n",
+      " [0.    0.279 0.535 0.    0.    0.    0.    0.    0.    0.535 0.279 0.   ]\n",
+      " [0.    0.256 0.492 0.687 0.    0.    0.    0.    0.687 0.492 0.256 0.   ]\n",
+      " [0.    0.213 0.409 0.571 0.687 0.    0.    0.687 0.571 0.409 0.213 0.   ]\n",
+      " [0.    0.152 0.292 0.409 0.492 0.535 0.535 0.492 0.409 0.292 0.152 0.   ]\n",
+      " [0.    0.079 0.152 0.213 0.256 0.279 0.279 0.256 0.213 0.152 0.079 0.   ]\n",
+      " [0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.   ]]\n"
      ]
     }
    ],
@@ -400,11 +434,11 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "The array slopes upward at an increasing rate, then cuts down to 0 in the middle. So interpretted as a greyscale image, it resembles a crater from an impact."
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
+   ]
   }
  ],
  "metadata": {
@@ -423,7 +457,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5-final"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
