Ask for image uploads as well as scripts

--- a/quizzes/quiz11.ipynb
+++ b/quizzes/quiz11.ipynb
@@ -86,7 +86,11 @@
     "\n",
     "The code in the cell below can be used to save some typing---it has the two rightmost columns of the table above converted to list literals.\n",
     "\n",
-    "Upload the script to generate such a plot as `quiz11prob2.py`.\n",
+    "Upload **two** files for this problem:\n",
+    "* `quiz11prob2.py`: The script you wrote to make the plot\n",
+    "* `quiz11prob2.png` or `quiz11prob2.jpg`: An image file that shows the plot produced by your script, which can be saved by matplotlib or captured as a screenshot.\n",
+    "\n",
+    "**Note:** It is very important for the image you upload to show the actual output of the Python script you upload.\n",
     "\n",
     "*Data source for this problem: US NSF and US DOE via tylervigen.com*"
    ]
@@ -114,7 +118,11 @@
     "\n",
     "(Hint: in discussion last week you used matplotlib to make a density plot of escape rates for quadratic polynomials of a complex variable in order to visualize Julia sets.  That code might be a good starting place for your work here, but this question doesn't use complex numbers at all.)\n",
     "\n",
-    "Make a script that generates such a plot and upload it as `quiz11prob3.py`."
+    "Upload **two** files for this problem:\n",
+    "* `quiz11prob3.py`: The script you wrote to make the plot\n",
+    "* `quiz11prob3.png` or `quiz11prob3.jpg`: An image file that shows the plot produced by your script, which can be saved by matplotlib or captured as a screenshot.\n",
+    "\n",
+    "**Note:** It is very important for the image you upload to show the actual output of the Python script you upload."
    ]
   },
   {
