Slight wording clarification

--- a/quizzes/quiz11.ipynb
+++ b/quizzes/quiz11.ipynb
@@ -90,7 +90,7 @@
     "* `quiz11prob2.py`: The script you wrote to make the plot\n",
     "* `quiz11prob2.png` or `quiz11prob2.jpg`: An image file that shows the plot produced by your script, which can be saved by matplotlib or captured as a screenshot.\n",
     "\n",
-    "**Note:** It is very important for the image you upload to show the actual output of the Python script you upload.\n",
+    "**Note:** The image and script you submit must match, i.e. the image must be one that was created with the exact script you submit.\n",
     "\n",
     "*Data source for this problem: US NSF and US DOE via tylervigen.com*"
    ]
@@ -122,7 +122,8 @@
     "* `quiz11prob3.py`: The script you wrote to make the plot\n",
     "* `quiz11prob3.png` or `quiz11prob3.jpg`: An image file that shows the plot produced by your script, which can be saved by matplotlib or captured as a screenshot.\n",
     "\n",
-    "**Note:** It is very important for the image you upload to show the actual output of the Python script you upload."
+    "\n",
+    "**Note:** The image and script you submit must match, i.e. the image must be one that was created with the exact script you submit."
    ]
   },
   {
