set origin=lower when using plt.imshow with np.meshgrid

--- a/samplecode/matplotlib/mpl-intro.ipynb
+++ b/samplecode/matplotlib/mpl-intro.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -31,7 +31,7 @@
        "'3.1.2'"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -479,7 +479,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -490,7 +490,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -500,16 +500,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.contour.QuadContourSet at 0x7f70b5d2ba30>"
+       "<matplotlib.contour.QuadContourSet at 0x7fed1dbc8610>"
       ]
      },
-     "execution_count": 84,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -534,16 +534,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.colorbar.Colorbar at 0x7f70b5ccad00>"
+       "<matplotlib.colorbar.Colorbar at 0x7fecd65aa310>"
       ]
      },
-     "execution_count": 85,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -582,16 +582,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.colorbar.Colorbar at 0x7f70b5b50220>"
+       "<matplotlib.colorbar.Colorbar at 0x7fecd2cc4b20>"
       ]
      },
-     "execution_count": 86,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -625,16 +625,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.colorbar.Colorbar at 0x7f70b5910040>"
+       "<matplotlib.colorbar.Colorbar at 0x7fecd2318790>"
       ]
      },
-     "execution_count": 90,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -653,23 +653,25 @@
    ],
    "source": [
     "plt.figure(figsize=(8,6))\n",
-    "plt.imshow(zz,extent=[np.min(x),np.max(x),np.min(y),np.max(y)])\n",
+    "plt.imshow(zz,extent=[np.min(x),np.max(x),np.min(y),np.max(y)],origin=\"lower\")\n",
+    "# origin=\"lower\" means the first row of zz appears at the bottom of the plot.\n",
+    "# That's correct since our meshgrid has smallest y values in the first row.\n",
     "plt.title(\"Density plot\")\n",
     "plt.colorbar()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.colorbar.Colorbar at 0x7f70b59ff940>"
+       "<matplotlib.colorbar.Colorbar at 0x7fecd22195b0>"
       ]
      },
-     "execution_count": 89,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -694,13 +696,6 @@
     "plt.imshow(zz,extent=[np.min(x),np.max(x),np.min(y),np.max(y)])\n",
     "plt.colorbar()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
