Updated Problem 2 in ws12 solns

--- a/worksheets/worksheet12_soln.ipynb
+++ b/worksheets/worksheet12_soln.ipynb
@@ -229,6 +229,7 @@
     "    \"\"\"If db table exists, add a joke. Otherwise, create a table and add the joke.\"\"\"\n",
     "    con.execute(\"CREATE TABLE IF NOT EXISTS jokes (joke TEXT, tells INT,success INT)\")\n",
     "    con.execute(\"INSERT INTO jokes VALUES (?,?,?);\",(joke,0,0)) # We haven't told the joke yet, so other vals set to 0\n",
+    "    con.commit()\n",
     "\n",
     "def tell(con):\n",
     "    \"\"\"Tells a random joke from the database\"\"\"\n",
@@ -255,6 +256,7 @@
     "            print(\"Invalid input, please try again.\")\n",
     "    # Update the tells and success values for the joke we told (identified by rowid)\n",
     "    con.execute(\"UPDATE jokes SET tells=?,success=? WHERE rowid==?;\",(tells,success,rowid))\n",
+    "    con.commit()\n",
     "\n",
     "def best(con):\n",
     "    \"\"\"Prints out the top 5 jokes, based on ratings\"\"\"\n",
@@ -284,8 +286,7 @@
     "    elif cmd == \"best\":\n",
     "        best(con)\n",
     "    \n",
-    "    # Commit any changes and close the connection.\n",
-    "    con.commit()\n",
+    "    # Close the connection (any changes were commited within the function)\n",
     "    con.close()"
    ]
   },
