Fix missing link to capture.html

--- a/worksheets/worksheet15.ipynb
+++ b/worksheets/worksheet15.ipynb
@@ -105,7 +105,7 @@
     "\n",
     "Here is a link to an HTML file:\n",
     "\n",
-    "* [capture.html]()\n",
+    "* [capture.html](https://www.dumas.io/teaching/2021/spring/mcs275/data/capture.html)\n",
     "\n",
     "If you open it in a browser, you won't see anything.  The document contains nothing but `<span>` tags, and no text.  Some of the `<span>` tags are nested inside other `<span>` tags.  How deeply are they nested?\n",
     "\n",
