Added Jennifer to solution headings

--- a/quizzes/quiz12_soln.ipynb
+++ b/quizzes/quiz12_soln.ipynb
@@ -6,7 +6,8 @@
    "source": [
     "# Quiz 12 Solutions\n",
     "\n",
-    "## MCS 275 Spring 2021 - Jennifer Vaccaro"
+    "## MCS 275 Spring 2021 - David Dumas\n",
+    "### Quiz and Solutions by Jennifer Vaccaro"
    ]
   },
   {
