--- a/quizzes/quiz1_soln.ipynb
+++ b/quizzes/quiz1_soln.ipynb
@@ -4,9 +4,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Quiz 1\n",
+    "# Quiz 1 Solutions\n",
     "\n",
-    "## MCS 275 Spring 2021 - David Dumas"
+    "## MCS 275 Spring 2021 - David Dumas\n",
+    "### Solutions by Jennifer Vaccaro"
    ]
   },
   {
