--- a/worksheets/worksheet1_solns.ipynb
+++ b/worksheets/worksheet1_solns.ipynb
@@ -5,7 +5,8 @@
    "metadata": {},
    "source": [
     "# Worksheet 1 Solutions \n",
-    "## MCS 275 Spring 2021 -- David Dumas"
+    "## MCS 275 Spring 2021 - David Dumas\n",
+    "### Solutions by Jennifer Vaccaro"
    ]
   },
   {
