--- a/worksheets/worksheet6_soln.ipynb
+++ b/worksheets/worksheet6_soln.ipynb
@@ -6,7 +6,8 @@
    "source": [
     "# Worksheet 6 Solutions\n",
     "\n",
-    "## MCS 275 Spring 2021 - Jennifer Vaccaro"
+    "## MCS 275 Spring 2021 - David Dumas\n",
+    "### Worksheet and Solutions by Jennifer Vaccaro"
    ]
   },
   {
