--- a/worksheets/worksheet7_soln.ipynb
+++ b/worksheets/worksheet7_soln.ipynb
@@ -6,7 +6,8 @@
    "source": [
     "# Worksheet 7 Solutions\n",
     "\n",
-    "## MCS 275 Spring 2021 - David Dumas"
+    "## MCS 275 Spring 2021 - David Dumas\n",
+    "### Solutions by Jennifer Vaccaro"
    ]
   },
   {
