--- a/quizzes/quiz12.ipynb
+++ b/quizzes/quiz12.ipynb
@@ -6,7 +6,8 @@
    "source": [
     "# Quiz 12\n",
     "\n",
-    "## MCS 275 Spring 2021 - Jennifer Vaccaro"
+    "## MCS 275 Spring 2021 - David Dumas\n",
+    "### Quiz by Jennifer Vaccaro"
    ]
   },
   {
