--- a/quizzes/quiz13_soln.ipynb
+++ b/quizzes/quiz13_soln.ipynb
@@ -7,7 +7,7 @@
     "# Quiz 13 Solutions\n",
     "\n",
     "## MCS 275 Spring 2021 - David Dumas\n",
-    "## Solutions by Jennifer Vaccaro"
+    "### Solutions by Jennifer Vaccaro"
    ]
   },
   {
