Add missing ipynb files that existed only on course site, not repo

--- a/quizzes/quiz12.ipynb
+++ b/quizzes/quiz12.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# Quiz 12\n",
     "\n",
-    "## MCS 275 Spring 2021 - David Dumas\n",
+    "## MCS 275 Spring 2021 - Emily Dumas\n",
     "### Quiz by Jennifer Vaccaro"
    ]
   },
