--- a/quizzes/quiz12_soln.ipynb
+++ b/quizzes/quiz12_soln.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# Quiz 12 Solutions\n",
     "\n",
-    "## MCS 275 Spring 2021 - David Dumas\n",
+    "## MCS 275 Spring 2021 - Emily Dumas\n",
     "### Quiz and Solutions by Jennifer Vaccaro"
    ]
   },
